--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								</div>
 							<div class="user_tools">
 								<div class="brightless">
-									<div class="brightless_name">Яркость:&nbsp;</div>
+									<div class="brightless_name" id="brightless_name">Яркость:&nbsp;100%</div>
 									<div class="brightless_value"></div>
 								</div>
 								<div class="zoom">
