index.js -> index.ts

--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
 					</div>
 
 					<div class="card card_size-l card_type-critical">
-						<!-- <img class="next_icon" src="assets/next-white.svg"> -->
 						<div class="card_top">
 							<img class="icons" src="assets/cam-white.svg">
 							<div class="title">Пылесос застрял</div>
@@ -169,13 +168,13 @@
 									<img class="camera" src="assets/image.jpg">
 								</div>
 							<div class="user_tools">
-								<div class="brightless">
-									<div class="brightless_name" id="brightless_name">Яркость:&nbsp;100%</div>
-									<div class="brightless_value"></div>
+								<div class="brightness">
+									<div class="brightness_name" id="brightness_feedback">Яркость:&nbsp;100%</div>
+									<!-- <div class="brightless_value"></div> -->
 								</div>
 								<div class="zoom">
-									<div class="zoom_name">Масштаб:&nbsp;</div>
-									<div class="zoom_value"></div>
+									<div class="zoom_name" id="zoom_feedback">Масштаб:&nbsp;1.0</div>
+									<!-- <div class="zoom_value"></div> -->
 								</div>
 							</div>
 						</div>
